Adding card using Bootstrap

--- a/style.css
+++ b/style.css
@@ -101,3 +101,29 @@ header {
 }
 
 /* _____________________________________________ */
+
+
+/* _______________SAMRT PHONE SECTION__________________ */
+
+.row {
+    border: 2px solid red;
+}
+
+.col-lg-2 {
+    border: 2px solid black;
+    /* width: 100%; */
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
